# android_audio_mixer

./: .gitmodules  LICENSE  README.md  maven-publish-helper.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/zeroonezero/android/audiomixer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/zeroonezero/android/audiomixer/: AudioInputSettingsDialog.java  Input.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  audio_input_settings_dialog.xml
app/src/main/res/values/: strings.xml
app/src/test/java/zeroonezero/android/audiomixer/: ExampleUnitTest.java
audio_mixer/: build.gradle
audio_mixer/src/androidTest/java/zeroonezero/android/audio_mixer/: ExampleInstrumentedTest.java
audio_mixer/src/main/: AndroidManifest.xml
audio_mixer/src/main/cpp/: CMakeLists.txt  audio_mixer.cpp
audio_mixer/src/main/java/zeroonezero/android/audio_mixer/: AudioBufferConverter.java  AudioConversions.java  AudioDecoder.java  AudioMixer.java
audio_mixer/src/main/java/zeroonezero/android/audio_mixer/input/: AudioInput.java  BlankAudioInput.java  GeneralAudioInput.java
audio_mixer/src/main/java/zeroonezero/android/audio_mixer/remix/: AudioRemixer.java  DefaultAudioRemixer.java  DownMixAudioRemixer.java  PassThroughAudioRemixer.java  UpMixAudioRemixer.java
audio_mixer/src/main/java/zeroonezero/android/audio_mixer/resample/: AudioResampler.java  DefaultAudioResampler.java  DifferentSampleRateResampler.java  DownsampleAudioResampler.java  PassThroughAudioResampler.java  UpsampleAudioResampler.java
audio_mixer/src/test/java/zeroonezero/android/audio_mixer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
